# loretex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPENDENTS.md  MANIFEST.in  README.md  environment.yml  loretex.code-workspace  pyproject.toml
.github/workflows/: build-deploy.yaml  ci.yml  publish-noarch.yml
archive/: build-deploy.yaml  generate_meta_fragments.py
conda.recipe/: meta.yaml
conda.recipe.dev/: meta.yaml
conda.recipe.release/: meta.yaml
config/: default.yaml  template.tex
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  releaserc.toml
docs/: architecture.md  conf.py  index.md  release-checklist.md  usage-examples.md
docs/api/: index.md
docs/guide/: cli-reference.md  configuration.md  development.md  index.md  installation.md  usage-examples.md  usage.md
docs/internals/: architecture.md  index.md
scripts/: post_create.py
src/loretex/: __init__.py  __main__.py  __version__.py  api.py  cli copy.py  cli.py
src/loretex/config/: __init__.py  exceptions.py  params.py  validate.py
src/loretex/conversion/: __init__.py  config.py  constants.py  engine.py  exceptions.py  generator.py  inline.py  labels.py  nodes.py  parser.py  registry.py  transforms.py
src/loretex/latex/: loretex-callouts.sty
src/loretex/parsers/: __init__.py  markdown_converter.py
src/loretex/pipeline/: __init__.py  assembly.py  templates.py
src/loretex/utils/: __init__.py  io.py  logging.py
tests/fixtures/: blockquotes.md  callouts.md  code-blocks.md  edge-cases.md  images.md  inline-formatting.md  lists.md  mixed-structure.md  tables.md  test.md
tests/fixtures/complex/: README.md  refs.bib  spec.yml  template.tex
tests/fixtures/complex/chapters/: body.md  intro.md
tests/test_conversion/: test_exceptions.py  test_fixtures.py  test_generator.py  test_nodes.py  test_rules.py  test_transforms.py
tests/test_loretex/: __init__.py  test_api.py  test_architecture_fixes.py  test_cli.py  test_integration_complex.py  test_spec_validation.py  test_template_assembly.py  test_template_vars.py
tests/test_loretex/test_conversion/: __init__.py  test_basic.py  test_fixtures.py  test_footnotes_wiki.py  test_internal_links.py  test_links.py  test_rules.py
